--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="root">
       <div class="overflow-hidden">
         <div class="loading-screen-container">
-          <h2 class="Syntha-Nova loader-text">BEN RYAN</h2>
+          <h2 class="Syntha-Nova loader-text">&lt;RINCO/&gt;</h2>
         </div>
       </div>
     </div>
