--- a/index.html
+++ b/index.html
@@ -7,24 +7,42 @@
     <title>Ben Ryan</title>
   </head>
   <style>
+    .main-container {
+      background-color: #020617;
+    }
     .loading-screen-container {
       width: 100%;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      opacity: 10%;
+      /* opacity: 70%; */
     }
     .loader-text {
       font-weight: 900;
       font-size: 40px;
     }
+
+    .loader {
+      width: 60px;
+      aspect-ratio: 1;
+      border-radius: 50%;
+      border: 8px solid;
+      border-color: #fff #0000;
+      animation: l1 1s infinite;
+    }
+    @keyframes l1 {
+      to {
+        transform: rotate(0.5turn);
+      }
+    }
   </style>
   <body>
     <div id="root">
-      <div class="overflow-hidden">
+      <div class="overflow-hidden main-container">
         <div class="loading-screen-container">
-          <h2 class="Syntha-Nova loader-text">&lt;RINCO/&gt;</h2>
+          <div class="loader"></div>
+          <!-- <h2 class="Syntha-Nova loader-text">&lt;RINCO/&gt;</h2> -->
         </div>
       </div>
     </div>
