tempChanges2FrontPage -dev0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/BR-logo-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ben Ryan</title>
+    <title>Ben Ryan Rinconada</title>
   </head>
   <style>
     .main-container {
