--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/BR-logo-white.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/BR-logo-white-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ben Ryan Rinconada</title>
   </head>
@@ -14,6 +14,7 @@
       width: 100%;
       height: 100vh;
       display: flex;
+      gap: 6px;
       justify-content: center;
       align-items: center;
       flex-flow: column;
@@ -27,11 +28,17 @@
 
     .loader {
       height: 4px;
-      width: 130px;
+      width: 80px;
       --c: no-repeat linear-gradient(#6100ee 0 0);
       background: var(--c), var(--c), #fff;
       background-size: 60% 100%;
       animation: l16 3s infinite;
+    }
+
+    .loader-image {
+        width: 10px;
+        height: 10px;
+        opacity: 30%;
     }
     @keyframes l16 {
       0% {
@@ -49,7 +56,8 @@
     <div id="root">
       <div class="overflow-hidden main-container">
         <div class="loading-screen-container">
-          <h2 class="Syntha-Nova loader-text">&lt;RINCO/&gt;</h2>
+          <!-- <h2 class="iBrand loader-text">hello</h2> -->
+          <img className="loader-image opacity-60" src="images/BR-logo-white-min.png" alt="">
           <div class="loader"></div>
         </div>
       </div>
